[gd_scene load_steps=45 format=3 uid="uid://6t7kekdvc42e"]

[ext_resource type="Texture2D" uid="uid://c44vf8avpmxkm" path="res://assets/characters/luca.png" id="1_nbc18"]
[ext_resource type="Script" path="res://script/character/cb_player.gd" id="1_woa42"]
[ext_resource type="PackedScene" uid="uid://c6vsyf8ynxhsx" path="res://script/ui/p_dash_cooldown.tscn" id="3_hegp8"]
[ext_resource type="PackedScene" uid="uid://bsvprx8m7qhod" path="res://script/ui/dash_particles.tscn" id="4_or2fm"]
[ext_resource type="PackedScene" uid="uid://kknos4cdnu5c" path="res://script/character/sb_scarf_start.tscn" id="5_md46d"]
[ext_resource type="PackedScene" uid="uid://cg0b8c8gyja0r" path="res://script/character/rb_scarf_piece.tscn" id="6_m6pie"]
[ext_resource type="PackedScene" uid="uid://dkxprx18xhice" path="res://script/character/rb_scarf_end.tscn" id="7_8rwbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tyew6"]
atlas = ExtResource("1_nbc18")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sded"]
atlas = ExtResource("1_nbc18")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uin8"]
atlas = ExtResource("1_nbc18")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yhlk"]
atlas = ExtResource("1_nbc18")
region = Rect2(352, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl0j7"]
atlas = ExtResource("1_nbc18")
region = Rect2(256, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myh0s"]
atlas = ExtResource("1_nbc18")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40abp"]
atlas = ExtResource("1_nbc18")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_frfr1"]
atlas = ExtResource("1_nbc18")
region = Rect2(352, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrus6"]
atlas = ExtResource("1_nbc18")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8sib"]
atlas = ExtResource("1_nbc18")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ck85"]
atlas = ExtResource("1_nbc18")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uh5g"]
atlas = ExtResource("1_nbc18")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnvka"]
atlas = ExtResource("1_nbc18")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a67mx"]
atlas = ExtResource("1_nbc18")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf3rc"]
atlas = ExtResource("1_nbc18")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8oiy"]
atlas = ExtResource("1_nbc18")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erqh"]
atlas = ExtResource("1_nbc18")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m6pe"]
atlas = ExtResource("1_nbc18")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0s0l"]
atlas = ExtResource("1_nbc18")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rttwp"]
atlas = ExtResource("1_nbc18")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fdne"]
atlas = ExtResource("1_nbc18")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x0yt"]
atlas = ExtResource("1_nbc18")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o383f"]
atlas = ExtResource("1_nbc18")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bycua"]
atlas = ExtResource("1_nbc18")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhk13"]
atlas = ExtResource("1_nbc18")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3x2c"]
atlas = ExtResource("1_nbc18")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq40v"]
atlas = ExtResource("1_nbc18")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr3ta"]
atlas = ExtResource("1_nbc18")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d303d"]
atlas = ExtResource("1_nbc18")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55uv4"]
atlas = ExtResource("1_nbc18")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrufv"]
atlas = ExtResource("1_nbc18")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_roy5u"]
atlas = ExtResource("1_nbc18")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qldlm"]
atlas = ExtResource("1_nbc18")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yice"]
atlas = ExtResource("1_nbc18")
region = Rect2(416, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cmtep"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyew6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sded")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uin8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yhlk")
}],
"loop": true,
"name": &"dash_loop",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl0j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myh0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40abp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frfr1")
}],
"loop": true,
"name": &"fall_fast_loop",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrus6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8sib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ck85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uh5g")
}],
"loop": true,
"name": &"fall_loop",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnvka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a67mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf3rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8oiy")
}],
"loop": true,
"name": &"hold",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m6pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0s0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rttwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fdne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x0yt")
}],
"loop": true,
"name": &"idle_loop",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o383f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bycua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhk13")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3x2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq40v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr3ta")
}],
"loop": false,
"name": &"land",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d303d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55uv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrufv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roy5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qldlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yice")
}],
"loop": true,
"name": &"run_loop",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5i67p"]
radius = 3.0
height = 23.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ludi0"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -3)
collision_mask = 3
script = ExtResource("1_woa42")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cmtep")
animation = &"land"
autoplay = "idle_loop"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.25)
shape = SubResource("CapsuleShape2D_5i67p")

[node name="RC_left" type="RayCast2D" parent="."]
scale = Vector2(1.00379, 1)
exclude_parent = false
target_position = Vector2(-5, 0)
collision_mask = 2

[node name="RC_right" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(5, 0)
collision_mask = 2

[node name="Particles" type="Node2D" parent="."]
z_index = -1

[node name="DashCooldown" parent="Particles" instance=ExtResource("3_hegp8")]

[node name="DashParticles" parent="Particles" instance=ExtResource("4_or2fm")]

[node name="DashTimers" type="Node2D" parent="."]

[node name="T_dashstate" type="Timer" parent="DashTimers"]
wait_time = 0.4
one_shot = true

[node name="T_dashcooldown" type="Timer" parent="DashTimers"]
wait_time = 1.8
one_shot = true

[node name="T_holdcooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ScarfContainer" type="Node2D" parent="."]
z_index = -1
position = Vector2(1, 0)

[node name="ScarfStart" parent="ScarfContainer" instance=ExtResource("5_md46d")]
position = Vector2(-2, 3)

[node name="PinJoint" type="PinJoint2D" parent="ScarfContainer"]
visible = false
position = Vector2(-2, 5)
node_a = NodePath("../ScarfStart")
node_b = NodePath("../ScarfPiece")

[node name="ScarfPiece" parent="ScarfContainer" instance=ExtResource("6_m6pie")]
position = Vector2(-2, 6)

[node name="PinJoint2" type="PinJoint2D" parent="ScarfContainer"]
visible = false
position = Vector2(-2, 11)
node_a = NodePath("../ScarfPiece")
node_b = NodePath("../ScarfPiece2")

[node name="ScarfPiece2" parent="ScarfContainer" instance=ExtResource("6_m6pie")]
position = Vector2(-2, 12)

[node name="PinJoint3" type="PinJoint2D" parent="ScarfContainer"]
visible = false
position = Vector2(-2, 17)
node_a = NodePath("../ScarfPiece2")
node_b = NodePath("../ScarfPiece3")

[node name="ScarfPiece3" parent="ScarfContainer" instance=ExtResource("6_m6pie")]
position = Vector2(-2, 18)

[node name="PinJoint4" type="PinJoint2D" parent="ScarfContainer"]
visible = false
position = Vector2(-2, 23)
node_a = NodePath("../ScarfPiece3")
node_b = NodePath("../ScarfEnd")

[node name="ScarfEnd" parent="ScarfContainer" instance=ExtResource("7_8rwbb")]
position = Vector2(-2, 24)

[node name="Trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(1, 7)
shape = SubResource("RectangleShape2D_ludi0")
debug_color = Color(0.740116, 0.46655, 0, 0.42)

[connection signal="timeout" from="DashTimers/T_dashstate" to="." method="_on_t_dashstate_timeout"]
[connection signal="timeout" from="DashTimers/T_dashcooldown" to="." method="_on_t_dashcooldown_timeout"]
[connection signal="timeout" from="T_holdcooldown" to="." method="_on_t_holdcooldown_timeout"]
